nav base alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -114,7 +114,19 @@ a:hover {
     padding-left: 4rem;
   }
   .nav-padding-right {
-    padding-right: 3.5rem;
+    padding-right: 9rem;
+  }
+  .nav-two-right {
+    padding-right: 6rem;
+  }
+  .nav-padding{
+    padding-left: 10rem !important;
+  }
+  .navbar-brand{
+    padding-left: 9rem !important;
+  }
+  .landing-text{
+    padding-left: .5rem;
   }
 }
 
